[gd_scene load_steps=7 format=3 uid="uid://6ewhh0xkgi5q"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_jj28c"]
[ext_resource type="PackedScene" uid="uid://divc2ithyhuj2" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/music_button/music_button.tscn" id="2_bwvok"]
[ext_resource type="Script" path="res://scenes/settings/main_setttings/main_settings.gd" id="2_uvc2n"]
[ext_resource type="PackedScene" uid="uid://g3tb8fv0v5he" path="res://scenes/battlefields/common/base_battlefield/gui/pause_menu/sfx_button/sfx_button.tscn" id="3_47b4y"]
[ext_resource type="Script" path="res://scenes/settings/language_option.gd" id="4_tq8gp"]
[ext_resource type="PackedScene" uid="uid://cniblhu062ir" path="res://scenes/popup/popup.tscn" id="6_emdhs"]

[node name="MainSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_uvc2n")

[node name="SettingsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -289.0
offset_top = -279.0
offset_right = 289.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jj28c")

[node name="TitleLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = -38.0
offset_right = 157.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.0196078, 0, 0.721569, 1)
theme_override_font_sizes/font_size = 48
text = "@SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 43.0
offset_right = 49.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_vertical = 1
text = "@MUSIC"
horizontal_alignment = 1

[node name="MusicSettings" type="HBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 53.0
offset_right = -41.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="MusicButton" parent="SettingsPanel/MusicSettings" instance=ExtResource("2_bwvok")]
unique_name_in_owner = true
layout_mode = 2
theme = null

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/MusicSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0

[node name="SFXLabel" type="Label" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 156.0
offset_right = 32.0
offset_bottom = 193.0
grow_horizontal = 2
size_flags_vertical = 1
text = "@SFX"
horizontal_alignment = 1

[node name="SFXSettings" type="HBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 41.0
offset_top = 166.0
offset_right = -41.0
offset_bottom = 253.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="SFXButton" parent="SettingsPanel/SFXSettings" instance=ExtResource("3_47b4y")]
unique_name_in_owner = true
layout_mode = 2
theme = null

[node name="SFXSlider" type="HSlider" parent="SettingsPanel/SFXSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 279.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="KeyBindingSettingsButton" type="Button" parent="SettingsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "@KEY_BINDING_SETTINGS"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LanguageLabel" type="Label" parent="SettingsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "@LANGUAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageOptionButton" type="OptionButton" parent="SettingsPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
script = ExtResource("4_tq8gp")

[node name="FullscreenButton" type="CheckButton" parent="SettingsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "@FULLSCREEN_ON_STARTUP"

[node name="DeleteSaveButton" type="Button" parent="SettingsPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
offset_left = 139.0
offset_top = 476.0
offset_right = 439.0
offset_bottom = 524.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_mode = 0
theme_type_variation = &"ButtonRed"
text = "@DELETE_SAVE_DATA"

[node name="DeleteSavePopup" parent="." instance=ExtResource("6_emdhs")]
unique_name_in_owner = true
layout_mode = 1
